Refactoring templates to be safer
Previously we assumed properties would always be present.

We can’t do that now we’re starting to add test records from the PDC and Ops maps inventory.

--- a/scar_add_metadata_toolbox/static/css/app.css
+++ b/scar_add_metadata_toolbox/static/css/app.css
@@ -104,16 +104,17 @@ address p:last-of-type {
     padding: 10px 0;
 }
 
+.app-collection-item {
+    margin-bottom: 45px;
+}
+.app-collection-item:last-of-type {
+    margin-bottom: 0;
+}
+
 .app-collection-item .bsk-dl-horizontal dt,
 .app-collection-item .bsk-dl-horizontal dd {
     text-align: left;
     padding: 5px 0;
-}
-
-.app-collection-item-count {
-    margin-top: 50px;
-    margin-bottom: 40px;
-    font-weight: bold;
 }
 
 .app-feedback .bsk-lead {
