--- a/templates/includes/collection/summary-information.j2
+++ b/templates/includes/collection/summary-information.j2
@@ -1,5 +1,7 @@
 <section class="bsk-sidebar bsk-sidebar-default app-collection-summary">
     <dl class="bsk-dl-horizontal">
+        <dt>Items:</dt>
+        <dd>{{ collection['items'] | length }}</dd>
         <dt>Topic:</dt>
         <dd>{{ collection.topic }}</dd>
         <dt>Publishers:</dt>
