Adding Nomad job deployment
Includes CD task to generate and submit a Nomad job file using Terraform.

--- a/provisioning/podman/dot.env.tmpl
+++ b/provisioning/podman/dot.env.tmpl
@@ -4,6 +4,8 @@ AUTH_CLIENT_ID=e9f1f826-156f-448f-aa9c-ca44ec35aafb
 AUTH_CLIENT_SCOPES=api://d364a396-36a8-4137-a6ef-12996fa39183/Records.Read.All
 AUTH_SERVER_TENANCY=d14c529b-5558-4a80-93b6-7655681e55d6
 AUTH_SERVER_ID=d364a396-36a8-4137-a6ef-12996fa39183
+CSW_ENDPOINT_UNPUBLISHED=http://10.70.1.140:5001/csw/unpublished
+CSW_ENDPOINT_PUBLISHED=http://10.70.1.140:5001/csw/published
 CSW_UNPUBLISHED_DB_CONNECTION=${app_csw_connection_string_unpublished}
 CSW_PUBLISHED_DB_CONNECTION=${app_csw_connection_string_published}
 STATIC_BUILD_DIR=./build
