This commit corrects a number of issues following the deployment of #1 and verifying the client/server workflow works correctly:
* Jinja template's weren't included in the application package, they're now in the app package and loaded as a module rather than through the file system
* CSW endpoints have been corrected (in Podman to point to the remote deployment, in the remote deployment to point to itself (`localhost:5000`)
* PyCSW's `init()` method has been mocked to allow us to change it's logging to *stdout* as we don't setup local, file system, logs anymore
* the Podman wrapper script and `.env` file have been amended to mount a directory for the `auth.json` file to prevent clobbering the `entry point.py` file by mounting all of the local config directory on top of `/usr/src/app` in the container (this needs further thinking about)

A couple of other changes were also made:

* the `parse_version` support script has been reformatted by Black
* the project Paw file has been updated to use the new remote CSW endpoints

--- a/provisioning/podman/scar-add-metadata-toolbox.tmpl
+++ b/provisioning/podman/scar-add-metadata-toolbox.tmpl
@@ -9,5 +9,6 @@ printf "%40s\n\n" "$${blue}Note: This command was run inside a container.$${norm
 
 podman run --rm=true --tty --interactive --user=root \
 --volume /users/geoweb/.config/scar-add-metadata-toolbox/.env:/usr/src/app/.env:ro \
+--volume /users/geoweb/.config/scar-add-metadata-toolbox/auth/:/root/.config/scar_add_metadata_toolbox/auth/:rw \
 --volume /users/geoweb/projects/scar-add-metadata-toolbox/records/:/usr/src/app/records/:rw \
  ${registry_image} "$@"
