--- a/provisioning/podman/dot.env.tmpl
+++ b/provisioning/podman/dot.env.tmpl
@@ -10,3 +10,4 @@ CSW_UNPUBLISHED_DB_CONNECTION=${app_csw_connection_string_unpublished}
 CSW_PUBLISHED_DB_CONNECTION=${app_csw_connection_string_published}
 STATIC_BUILD_DIR=./build
 S3_BUCKET=${app_s3_static_site_bucket}
+APP_AUTH_SESSION_FILE_PATH=/root/.config/scar_add_metadata_toolbox/auth/auth.json
