--- a/provisioning/nomad/scar-add-metadata-toolbox.hcl.tmpl
+++ b/provisioning/nomad/scar-add-metadata-toolbox.hcl.tmpl
@@ -36,8 +36,8 @@ job "scar-add-metadata-toolbox" {
                 AUTH_CLIENT_SCOPES = "api://d364a396-36a8-4137-a6ef-12996fa39183/Records.Read.All"
                 AUTH_SERVER_TENANCY = "d14c529b-5558-4a80-93b6-7655681e55d6"
                 AUTH_SERVER_ID = "d364a396-36a8-4137-a6ef-12996fa39183"
-                CSW_ENDPOINT_UNPUBLISHED = "http://localhost:5000/csw/unpublished"
-                CSW_ENDPOINT_PUBLISHED= "http://localhost:5000/csw/published"
+                CSW_ENDPOINT_UNPUBLISHED = "http://10.70.1.140:5001/csw/unpublished"
+                CSW_ENDPOINT_PUBLISHED= "http://10.70.1.140:5001/csw/published"
                 CSW_UNPUBLISHED_DB_CONNECTION = "${app_csw_connection_string_unpublished}"
                 CSW_PUBLISHED_DB_CONNECTION = "${app_csw_connection_string_published}"
                 STATIC_BUILD_DIR = "./scar_add_metadata_toolbox/build"
