Adding Markdown support to contact forms
Uses the Mardown-it library to convert markdown formatted text from the user into HTML for submission as form data, currently to MS Flow.

This was necessary to preserve line break formatting in messages when data is moved between actions within the MS Flow (due to difficulties with literal line breaks in JSON data). HTML encodes line breaks etc. as proper elements which means the string itself can be a single line.

Adding markdown support is also useful for users that wish to include lists or other formatting.

--- a/scar_add_metadata_toolbox/templates/feedback.j2
+++ b/scar_add_metadata_toolbox/templates/feedback.j2
@@ -13,6 +13,9 @@
                     <textarea name="feedback-content" id="feedback-content" class="bsk-form-control" rows="8" required></textarea>
                 </div>
                 <div class="bsk-help-block bsk-text-muted">
+                    <i class="fab fa-markdown"></i> You can use <a href="https://commonmark.org/help/">Markdown</a> to format your message.
+                </div>
+                <div class="bsk-alert bsk-alert-info bsk-alert-highlight">
                     If something went wrong, please describe what you were doing and what went wrong.
                 </div>
                 <div class="bsk-alert bsk-alert-warning bsk-alert-highlight">
