--- a/scar_add_metadata_toolbox/templates/includes/items/contact.j2
+++ b/scar_add_metadata_toolbox/templates/includes/items/contact.j2
@@ -16,6 +16,9 @@
             <div class="bsk-form-group">
                 <label for="message-content">Message details</label>
                 <textarea name="message-content" id="message-content" class="bsk-form-control" rows="8" required></textarea>
+                <div class="bsk-help-block bsk-text-muted">
+                    <i class="fab fa-markdown"></i> You can use <a href="https://commonmark.org/help/">Markdown</a> to format your message.
+                </div>
             </div>
             <div class="bsk-alert bsk-alert-warning bsk-alert-highlight">
                 Do not any include any sensitive or personal information.
