--- a/scar_add_metadata_toolbox/templates/_includes/items/contact.j2
+++ b/scar_add_metadata_toolbox/templates/_includes/items/contact.j2
@@ -2,16 +2,16 @@
     <header>
         <h2><i class="far fa-comment-alt-lines"></i> Contact us about this item</h2>
     </header>
-    <p>Your message will be sent to the <strong>{{ item.resource.contacts_by_role.publisher.0.organisation.display_name }}</strong>, who manage this item.</p>
+    <p>Your message will be sent to the <strong>{{ item.point_of_contact }}</strong>, who manage this item.</p>
     <div class="bsk-alert bsk-alert-info bsk-alert-highlight">
-        We try to answer messages within 2 days. We'll contact you if it will take us longer.
+        We try to answer messages within 2 days. We'll contact you first if it will take us longer.
     </div>
 
     <form action="https://prod-66.westeurope.logic.azure.com:443/workflows/21919e9ce6964d1c90d520eff13214c7/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=WUJcFcM-hXnylyQna0ZpvUuIflk5tCW_scCASG6SYFE" accept-charset="UTF-8" method="post" onsubmit="itemContactFormSubmit(event, this)">
         <fieldset>
             <div class="bsk-form-group">
                 <label class="bsk-control-label" for="message-subject">Message subject</label>
-                <input type="text" name="message-subject" id="message-subject" class="bsk-form-control" value="Message about '{{ item.resource.title.value }}'" required />
+                <input type="text" name="message-subject" id="message-subject" class="bsk-form-control" value="Message about '{{ item.title }}'" required />
             </div>
             <div class="bsk-form-group">
                 <label for="message-content">Message details</label>
@@ -31,7 +31,7 @@
             </div>
             <div class="bsk-form-group">
                 <label class="bsk-control-label" for="message-sender-email">Your email address</label>
-                <input type="email" class="bsk-form-control" name="message-sender-email" id="message-sender-email" placeholder="connie.watson@bas.ac.uk" required />
+                <input type="email" class="bsk-form-control" name="message-sender-email" id="message-sender-email" placeholder="conwat@bas.ac.uk" required />
             </div>
             <div class="bsk-alert bsk-alert-info bsk-alert-highlight">
                 We will only use this information for contacting you about your message.
@@ -52,27 +52,28 @@
         <h3>Alternative contact methods</h3>
     </header>
     <dl class="bsk-dl-lg bsk-row">
-        <div class="bsk-col-24-md-5">
+        <div class="bsk-col-24-md-6">
             <dt><i class="far fa-envelope"></i> By post</dt>
             <dd>
-                {{ item.resource.contacts_by_role.publisher.0.address.delivery_point }}
+                {% set address_lines = item.point_of_contact_details.address.delivery_point.split(',') %}
+                {{ address_lines | join(',<br />') }},
                 <br />
-                {{ item.resource.contacts_by_role.publisher.0.address.city }}
+                {{ item.point_of_contact_details.address.city }},
                 <br />
-                {{ item.resource.contacts_by_role.publisher.0.address.administrative_area }}
+                {{ item.point_of_contact_details.address.administrative_area }},
                 <br />
-                {{ item.resource.contacts_by_role.publisher.0.address.postal_code }}
+                {{ item.point_of_contact_details.address.postal_code }},
                 <br />
-                {{ item.resource.contacts_by_role.publisher.0.address.country }}
+                {{ item.point_of_contact_details.address.country }}
             </dd>
         </div>
         <div class="bsk-col-24-md-5 bsk-col-24-md-offset-3">
             <dt><i class="far fa-at"></i> By email</dt>
-            <dd><a href="mailto:{{ item.resource.contacts_by_role.publisher.0.email }}">{{ item.resource.contacts_by_role.publisher.0.email }}</a></dd>
+            <dd><a href="mailto:{{ item.point_of_contact_details.email }}">{{ item.point_of_contact_details.email }}</a></dd>
         </div>
         <div class="bsk-col-24-md-5 bsk-col-24-md-offset-3">
            <dt><i class="far fa-phone-rotary"></i> By phone</dt>
-            <dd>{{ item.resource.contacts_by_role.publisher.0.phone }}</dd>
+            <dd>{{ item.point_of_contact_details.phone }}</dd>
         </div>
     </dl>
 </section>
