--- a/scar_add_metadata_toolbox/templates/_includes/items/descriptive-keywords.j2
+++ b/scar_add_metadata_toolbox/templates/_includes/items/descriptive-keywords.j2
@@ -2,18 +2,19 @@
     <header>
         <h2>Keywords</h2>
     </header>
-    {% for descriptive_keywords in item.resource.keywords_by_type.theme %}
+
+    {% for theme_keyword_set in item.theme_keywords %}
         <div>
             <h3 class="bsk-h5">
-                {{ descriptive_keywords.thesaurus.title.display_value }}
-                {% if descriptive_keywords.thesaurus.title.href %}
-                    <a href="{{ descriptive_keywords.thesaurus.title.href }}">
+                {{ theme_keyword_set.thesaurus.title.value }}
+                {% if theme_keyword_set.thesaurus.title.href %}
+                    <a href="{{ theme_keyword_set.thesaurus.title.href }}">
                         <i class="far fa-info-circle"></i>
                     </a>
                 {% endif %}
             </h3>
             <ul class="bsk-list-unstyled app-keywords-list fa-ul">
-                {% for theme_keyword in descriptive_keywords.terms %}
+                {% for theme_keyword in theme_keyword_set.terms %}
                     <li>
                         <span class="fa-li"><i class="far fa-tag"></i></span>
                         {{ theme_keyword.term }}
