--- a/scar_add_metadata_toolbox/templates/_includes/items/lineage.j2
+++ b/scar_add_metadata_toolbox/templates/_includes/items/lineage.j2
@@ -2,5 +2,5 @@
     <header>
         <h2><i class="far fa-scroll-old"></i> Lineage</h2>
     </header>
-    <p>{{ item.resource.lineage }}</p>
+    <p>{{ item.lineage_markdown }}</p>
 </section>
