--- a/scar_add_metadata_toolbox/templates/_views/legal/privacy.j2
+++ b/scar_add_metadata_toolbox/templates/_views/legal/privacy.j2
@@ -1,4 +1,4 @@
-{% extends 'app/layouts/app.j2' %}
+{% extends 'app/_layouts/app.j2' %}
 
 {% block main_content %}
     <div class="app-legal-privacy bsk-col-12-sm-12 bsk-col-12-md-9 bsk-col-12-xl-10 ">
