--- a/scar_add_metadata_toolbox/templates/_views/item-details.j2
+++ b/scar_add_metadata_toolbox/templates/_views/item-details.j2
@@ -1,16 +1,14 @@
-{% extends 'app/layouts/app.j2' %}
+{% extends 'app/_layouts/app.j2' %}
+{% from 'bas_style_kit/macros/bsk_pattern_item_type_header.j2' import pattern_item_type_header %}
 
 {% block main_content %}
-    {% with type='item', title=item.resource.title.value %}
-        {% include 'app/includes/common/header.j2' %}
-    {% endwith %}
-
+    {{ pattern_item_type_header('item', item.title_markdown) }}
     <div class="bsk-row">
         <div class="bsk-col-12-md-9">
-            {% include 'app/includes/items/summary-information.j2' %}
+            {% include 'app/_includes/items/summary-information.j2' %}
         </div>
         <div class="bsk-col-12-md-3">
-            {% include 'app/includes/items/descriptive-keywords.j2' %}
+            {% include 'app/_includes/items/descriptive-keywords.j2' %}
         </div>
     </div>
 
@@ -67,28 +65,28 @@
         </ul>
         <div class="bsk-tab-content">
             <div id="item-details-data" class="bsk-tab-pane bsk-fade bsk-in bsk-active" role="tabpanel">
-                {% include 'app/includes/items/data.j2' %}
+                {% include 'app/_includes/items/data.j2' %}
             </div>
             <div id="item-details-authors" class="bsk-tab-pane bsk-fade" role="tabpanel">
-                {% include 'app/includes/items/authors.j2' %}
+                {% include 'app/_includes/items/authors.j2' %}
             </div>
             <div id="item-details-citation" class="bsk-tab-pane bsk-fade" role="tabpanel">
-                {% include 'app/includes/items/citation.j2' %}
+                {% include 'app/_includes/items/citation.j2' %}
             </div>
             <div id="item-details-licence" class="bsk-tab-pane bsk-fade" role="tabpanel">
-                {% include 'app/includes/items/licence.j2' %}
+                {% include 'app/_includes/items/licence.j2' %}
             </div>
             <div id="item-details-extent" class="bsk-tab-pane bsk-fade" role="tabpanel">
-                {% include 'app/includes/items/extent.j2' %}
+                {% include 'app/_includes/items/extent.j2' %}
             </div>
             <div id="item-details-lineage" class="bsk-tab-pane bsk-fade" role="tabpanel">
-                {% include 'app/includes/items/lineage.j2' %}
+                {% include 'app/_includes/items/lineage.j2' %}
             </div>
             <div id="item-details-additional-information" class="bsk-tab-pane bsk-fade" role="tabpanel">
-                {% include 'app/includes/items/additional-information.j2' %}
+                {% include 'app/_includes/items/additional-information.j2' %}
             </div>
             <div id="item-details-contact" class="bsk-tab-pane bsk-fade" role="tabpanel">
-                {% include 'app/includes/items/contact.j2' %}
+                {% include 'app/_includes/items/contact.j2' %}
             </div>
         </div>
     </nav>
@@ -105,6 +103,9 @@
     <script src="https://cdn.web.bas.ac.uk/libs/leaflet/1.6.0/js/leaflet.min.js" integrity="sha256-JOnsZs28NnzfQkVhxtJmqdalYkF/ejmYWXD//vFzgWA=" crossorigin="anonymous"></script>
     <script src="https://cdn.web.bas.ac.uk/libs/proj4js/2.4.3/proj4-2.4.3.min.js" integrity="sha256-2ywP8gZSxQqabTEhcw+Xc3zpb/n6aAc3D0sneTtRNHw=" crossorigin="anonymous"></script>
     <script src="https://cdn.web.bas.ac.uk/libs/proj4leaflet/v1.0.1/js/proj4leaflet-1.0.1.min.js" integrity="sha256-2/tIGOC+qdPryEVGe/iMOwpH4YHC3tcam5t8aqi74KI=" crossorigin="anonymous"></script>
-    <script>var item_id = '{{ item.file_identifier }}'</script>
+    <script>
+        var item_id = '{{ item.file_identifier }}';
+        var geographic_bounding_extent = {{ item.geographic_extent.bounding_box_geojson }};
+    </script>
     <script src="/static/js/item.js"></script>
 {% endblock %}
