Using API.BAS endpoints in podman environment configuration

--- a/provisioning/podman/dot.env.tmpl
+++ b/provisioning/podman/dot.env.tmpl
@@ -4,8 +4,8 @@ AUTH_CLIENT_ID=91c284e7-6522-4eb4-9943-f4ec08e98cb9
 AUTH_CLIENT_SCOPES=api://8bfe65d3-9509-4b0a-acd2-8ce8cdc0c01e/BAS.MAGIC.ADD.Access
 AUTH_SERVER_TENANCY=b311db95-32ad-438f-a101-7ba061712a4e
 AUTH_SERVER_ID=8b45581e-1b2e-4b8c-b667-e5a1360b6906
-CSW_ENDPOINT_UNPUBLISHED=http://10.70.1.140:5001/csw/unpublished
-CSW_ENDPOINT_PUBLISHED=http://10.70.1.140:5001/csw/published
+CSW_ENDPOINT_UNPUBLISHED=https://api.bas.ac.uk/data/metadata/add/csw/v1/unpublished
+CSW_ENDPOINT_PUBLISHED=https://api.bas.ac.uk/data/metadata/add/csw/v1/published
 CSW_UNPUBLISHED_DB_CONNECTION=${app_csw_connection_string_unpublished}
 CSW_PUBLISHED_DB_CONNECTION=${app_csw_connection_string_published}
 STATIC_BUILD_DIR=./build
