Fixing missing label for outdated items

--- a/scar_add_metadata_toolbox/templates/_includes/items/additional-information.j2
+++ b/scar_add_metadata_toolbox/templates/_includes/items/additional-information.j2
@@ -53,6 +53,8 @@
         <dd>
             {% if item.status == 'current' %}
                 <span class="bsk-text-success"><i class="fa-fw far fa-check"></i> Current</span>
+            {% elif item.status == 'outdated' %}
+                <span class="bsk-text-warning"><i class="fa-fw far fa-exclamation-triangle"></i> Outdated</span>
             {% endif %}
         </dd>
     </dl>
