Fixing potential for invalid form submissions

--- a/scar_add_metadata_toolbox/templates/_includes/items/contact.j2
+++ b/scar_add_metadata_toolbox/templates/_includes/items/contact.j2
@@ -7,7 +7,7 @@
         We try to answer messages within 2 days. We'll contact you first if it will take us longer.
     </div>
 
-    <form action="https://prod-66.westeurope.logic.azure.com:443/workflows/21919e9ce6964d1c90d520eff13214c7/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=WUJcFcM-hXnylyQna0ZpvUuIflk5tCW_scCASG6SYFE" accept-charset="UTF-8" method="post" onsubmit="itemContactFormSubmit(event, this)">
+    <form action="#" accept-charset="UTF-8" method="post" onsubmit="itemContactFormSubmit(event, this)">
         <fieldset>
             <div class="bsk-form-group">
                 <label class="bsk-control-label" for="message-subject">Message subject</label>
